@@ -22,22 +22,22 @@ function Debug
 {
 	if [ -n "$debug" ]
 	then
-		echo -e "DEBUG: $@" 1>&2
+		echo -e "DEBUG: $*" 1>&2
 	fi
 }
 ###############################################################################
 function Echo
 {
-	echo -e "$@"
+	echo -e "$*"
 }
 ###############################################################################
 # common low level code for Error and Warning functions
 function Logger
 {
 	# screen
-	Echo "$0: $@" 1>&2
+	Echo "$0: $*" 1>&2
 	# for optionnal bug report
-	echo -e "$0: $@" >> $RPMREBUILD_BUGREPORT
+	echo -e "$0: $*" >> "$RPMREBUILD_BUGREPORT"
 
 }
 ###############################################################################
@@ -50,18 +50,18 @@ function Logger
 function Error
 {
 	ret=$?
-	Logger "ERROR: $@"
+	Logger "ERROR: $*"
 	return $ret
 }
 ###############################################################################
 function Warning
 {
-	Logger "WARNING: $@"
+	Logger "WARNING: $*"
 }
 ###############################################################################
 function Critical
 {
-	Error $@
+	Error "$*"
 	exit 1
 }
 ###############################################################################
@@ -69,10 +69,11 @@ function Critical
 function AskYesNo
 {
 	local Ans
-	echo -en "$@ ? (y/N) " 1>&2
+	echo -en "$* ? (y/N) " 1>&2
 	read Ans
 	case "$Ans" in
 		[yY]*) return 0;;
+		[nN]*) return 1;;
 		*)      return 1;;
 	esac || return 1 # should not happened
 	return 1 # should not happend
