@@ -166,8 +166,8 @@ function RequeredArgument
 {
 	[ "$SHORT_OPTION" = '-' ] || return 0  # we use short option,
                                                  	 # do nothing
-	if [ "$OPTARG_EXIST" ]; then
-		[ "$OPTIND_INCR" ] && OPTIND=$(( OPTIND + 1 ))
+	if [ -n "$OPTARG_EXIST" ]; then
+		[ -n "$OPTIND_INCR" ] && OPTIND=$(( OPTIND + 1 ))
 		return 0
 	fi
 
@@ -1063,6 +1063,9 @@ function ProcessLongOptions
 			   		[yY]*)
 						RPMREBUILD_COMMENT_MISSING="yes"
 					;;
+			   		[nN]*)
+						RPMREBUILD_COMMENT_MISSING="no"
+					;;
 
                            		*)
 						RPMREBUILD_COMMENT_MISSING="no"
@@ -1190,6 +1193,7 @@ function ProcessLongOptions
 				RequeredArgument || return
 				case "$OPTARG" in
 			   		[yY]*) verify="yes";;
+			   		[nN]*) verify="no";;
                            		*)      verify="no";;
 				esac
 			;;
@@ -1304,7 +1308,7 @@ function CommandLineParsing
 
 		# Get "full" long option
 		ProcessLongOptions || return
-		[ -z "$NEED_EXIT" ] || return $NEED_EXIT
+		[ -z "$NEED_EXIT" ] || return "$NEED_EXIT"
 	done || return
 
 	# controls
@@ -1362,7 +1366,7 @@ function CommandLineParsing
 		# There is no rpmdir specified 
 		# Let us find native rpmdir value
 		# (with respect to defines)
-		rpmdir="$(eval rpm $rpm_defines --eval %_rpmdir)" || return
+		rpmdir="$(eval rpm "$rpm_defines" --eval %_rpmdir)" || return
 	else
 		# There is rpmdir specified.
 		# Let us find it's absolute path.
