@@ -7,6 +7,7 @@
 - clean test x$var, use -z
 - change email to tutanota
 - change copyright year
+- fix warnings from shellcheck
 
 * Sun Jan 17 2021 <eric.gerbier@tutanota.com> 2.16-1
 - fix bug if more than 10 args (thanks Dmitry V. Levin)
